--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 offset-lg-1">
                     <div class="who">
-                        <p>who I </p>
+                        <p>who I am </p>
                         <h2>Sandy Shiref</h2>
                         <p style="text-align: center;">Professional Web Designer</p>
                         <h5>I am a fresh graduate from computer science faculty at Ahram canadian university and i finished Front end developer course and i now can build a professional website .</h5>
